--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,7 +23,7 @@ jobs:
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> ./.env
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> ./src/.env
           echo "GPT_API=${{ secrets.GPT_APT }}" >> ./.env
-          echo "GPT_API=${{ secrets.GPT_APT }}" >> ./app/.env
+          echo "GPT_API=${{ secrets.GPT_APT }}" >> ./src/.env
           
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
